# hse_cpp

./: .clang-format  .gitignore
bdz/task01/: CMakeLists.txt  matrix.h  matrix_test.cpp  rational.cpp  rational.h  rational_division_by_zero.h
bdz/task02/: CMakeLists.txt  array.h  array_test.cpp
bdz/task03/: CMakeLists.txt  vector.h  vector.tpp  vector_public_test.cpp
bdz/task04/: vector.h  vector.tpp  vector_public_test.cpp
bdz/task05/: CMakeLists.txt  shared_ptr.h  shared_ptr_public_test.cpp
bdz/task06/: CMakeLists.txt  range.cpp  range.h  range_public_test.cpp
bdz/task07/: CMakeLists.txt  unordered_set.h  unordered_set_public_test.cpp
bdz/task08/: CMakeLists.txt  main.cpp
bdz/task09/: CMakeLists.txt  main.cpp
bdz/task10/: main.cpp
bdz/task11/: CMakeLists.txt  big_integer.cpp  big_integer.h  big_integer_test.cpp
colloquium/: CMakeLists.txt  date.cpp  date.h  main.cpp  test
sem02/: task01  task01.cpp  task02  task02.cpp  task03  task03.cpp  task04  task04.cpp  task05  task05.cpp  task06  task06.cpp  task07  task07.cpp  task08  task08.cpp  task09  task09.cpp  task10  task10.cpp  task11  task11.cpp
sem03/: task01  task01.cpp  task02  task02.cpp  task05  task05.cpp
sem03/task03/: main  main.cpp  sum.cpp  sum.h
sem03/task04/: main  main.cpp  task04.h
sem04/task01/: CMakeLists.txt  main.cpp  rational.cpp
sem04/task02/: CMakeLists.txt  main.cpp  string_view.cpp  string_view.h
sem05/task01/: CMakeLists.txt  circle.h  geometry_main.cpp  i_shape.h  line.h  main.cpp  point.h  polygon.h  ray.h  segment.h  vector.h
sem05/task01-opt/: CMakeLists.txt  main.cpp
sem05/task01/src/: circle.cpp  line.cpp  point.cpp  polygon.cpp  ray.cpp  segment.cpp  vector.cpp
sem05/task02-opt/: CMakeLists.txt  main.cpp
sem06/task01/: CMakeLists.txt  main.cpp
sem06/task02/: CMakeLists.txt  main.cpp
sem06/task03/: main.cpp
sem06/task04/: CMakeLists.txt  main.cpp
sem06/task05/: CMakeLists.txt  main.cpp
sem06/task06/: CMakeLists.txt  main.cpp
sem06/task07/: CMakeLists.txt  main.cpp
sem06/task08/: CMakeLists.txt  main.cpp
sem06/task09/: main.cpp
sem06/task10/: main.cpp
sem06/task11/: CMakeLists.txt  main.cpp
sem07/task01/: CMakeLists.txt  main.cpp  unique_ptr.h  unique_ptr_public_test.cpp
sem07/task01-opt/: CMakeLists.txt  main.cpp
sem07/task02-opt/: CMakeLists.txt  main.cpp
